{
    "name": "InputController",
    "maps": [
        {
            "name": "Player Movement",
            "id": "05742922-553a-4fbe-afcd-25c183a0edcd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "102abf73-bd8d-445b-a7c8-0415dfe0454a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Ability",
                    "type": "Button",
                    "id": "10f6c7f9-8ae5-430b-8fe5-ae52fa816992",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9ffe9a13-b1ce-484d-914f-3cba5331f913",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c3f160f1-a344-45e1-8005-f67a11323b88",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c5b5d102-99f7-49b4-9020-84700e212c24",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e0c4eb0c-f36e-4213-8e4b-4cadd1c9e814",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "948cde8f-cfe1-4f08-ad4c-318bfec2c73f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4561ddef-8875-4b1b-a614-1b85014c4aa7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "5d867a84-84cc-4ae3-932d-bd271da8fcb3",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "de7947e4-a8f7-4924-a18d-4c9fec75be0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "674bc900-0938-42eb-b9aa-1473015fc5b0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}